# NeuralAmpPlugin

./: CMakeLists.txt
Source/: AmpAudioProcessor.cpp  AmpAudioProcessor.h  Main.cpp
Source/dsp/: Mappers.h  ParameterSetup.h  Processor.cpp  Processor.h  Processor.hpp
Source/looknfeel/: StripKnob_look_n_feel.h
Source/ui/: gui.cpp  gui.h  gui.hpp
Source/ui/components/: TopBarComponent.cpp  TopBarComponent.h
